--- a/Peppermint/Base.lproj/Main.storyboard
+++ b/Peppermint/Base.lproj/Main.storyboard
@@ -1195,7 +1195,7 @@ Version 1.0.0</string>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="d34-C8-Pk7" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="465" y="-718"/>
+            <point key="canvasLocation" x="201" y="-674"/>
         </scene>
         <!--Chat Entries View Controller-->
         <scene sceneID="JVh-jH-lY8">
@@ -1385,6 +1385,95 @@ Version 1.0.0</string>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="s1w-nW-UGf" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="248" y="1138"/>
+        </scene>
+        <!--Feed Back View Controller-->
+        <scene sceneID="C06-7L-oOk">
+            <objects>
+                <viewController storyboardIdentifier="FeedBackViewController" id="IEQ-ag-O6Y" customClass="FeedBackViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="T6n-ot-ocJ"/>
+                        <viewControllerLayoutGuide type="bottom" id="ro0-9a-yXh"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="GcN-60-4Ob">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="nnv-S3-79e" userLabel="NavigationView">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="64"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="_FeedBack" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hPj-Oc-9Uq">
+                                        <rect key="frame" x="0.0" y="20" width="320" height="44"/>
+                                        <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="19"/>
+                                        <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Zp1-ZM-m2g">
+                                        <rect key="frame" x="0.0" y="24" width="40" height="34"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" secondItem="Zp1-ZM-m2g" secondAttribute="height" multiplier="20:17" id="L40-ht-bz5"/>
+                                        </constraints>
+                                        <state key="normal" image="icon_back"/>
+                                        <connections>
+                                            <action selector="backButtonPressed:" destination="IEQ-ag-O6Y" eventType="touchUpInside" id="GSV-DK-8BE"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                                <color key="backgroundColor" red="0.3411764706" green="0.72941176470000002" blue="0.57254901960000004" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstItem="hPj-Oc-9Uq" firstAttribute="top" secondItem="nnv-S3-79e" secondAttribute="top" constant="20" id="795-U0-cNa"/>
+                                    <constraint firstItem="Zp1-ZM-m2g" firstAttribute="top" secondItem="nnv-S3-79e" secondAttribute="top" constant="24" id="BsK-n8-0Fm"/>
+                                    <constraint firstAttribute="bottom" secondItem="Zp1-ZM-m2g" secondAttribute="bottom" constant="6" id="Tcg-2I-bum"/>
+                                    <constraint firstItem="Zp1-ZM-m2g" firstAttribute="leading" secondItem="nnv-S3-79e" secondAttribute="leading" id="dBL-rF-pG6"/>
+                                    <constraint firstItem="hPj-Oc-9Uq" firstAttribute="leading" secondItem="nnv-S3-79e" secondAttribute="leading" id="f6f-EA-Pae"/>
+                                    <constraint firstAttribute="bottom" secondItem="hPj-Oc-9Uq" secondAttribute="bottom" id="hmj-3S-t0A"/>
+                                    <constraint firstAttribute="trailing" secondItem="hPj-Oc-9Uq" secondAttribute="trailing" id="mdc-5T-3Fg"/>
+                                    <constraint firstAttribute="height" constant="64" id="qQU-ai-lS7"/>
+                                </constraints>
+                            </view>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="dbi-qO-9Kg">
+                                <rect key="frame" x="0.0" y="64" width="320" height="464"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                <color key="sectionIndexBackgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                <connections>
+                                    <outlet property="dataSource" destination="IEQ-ag-O6Y" id="84z-lw-LzF"/>
+                                    <outlet property="delegate" destination="IEQ-ag-O6Y" id="MdZ-dw-qaI"/>
+                                </connections>
+                            </tableView>
+                            <label opaque="NO" clipsSubviews="YES" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="_Or email us for support" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ihE-lH-nLt" userLabel="SupportEmailLabel">
+                                <rect key="frame" x="0.0" y="528" width="320" height="40"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="40" id="dvB-rJ-TMT"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" red="0.085774112779999995" green="0.36037287979999999" blue="0.31380316759999999" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="ro0-9a-yXh" firstAttribute="top" secondItem="ihE-lH-nLt" secondAttribute="bottom" id="1aX-3b-BYg"/>
+                            <constraint firstItem="dbi-qO-9Kg" firstAttribute="leading" secondItem="GcN-60-4Ob" secondAttribute="leading" id="2bB-lG-MEz"/>
+                            <constraint firstAttribute="trailing" secondItem="dbi-qO-9Kg" secondAttribute="trailing" id="3zI-Y1-AhL"/>
+                            <constraint firstAttribute="trailing" secondItem="ihE-lH-nLt" secondAttribute="trailing" id="IWB-qn-jTP"/>
+                            <constraint firstItem="ihE-lH-nLt" firstAttribute="top" secondItem="dbi-qO-9Kg" secondAttribute="bottom" id="byT-hA-C9l"/>
+                            <constraint firstItem="nnv-S3-79e" firstAttribute="top" secondItem="GcN-60-4Ob" secondAttribute="top" id="cKf-LC-zE5"/>
+                            <constraint firstItem="dbi-qO-9Kg" firstAttribute="top" secondItem="nnv-S3-79e" secondAttribute="bottom" id="cio-pA-vLr"/>
+                            <constraint firstItem="nnv-S3-79e" firstAttribute="leading" secondItem="GcN-60-4Ob" secondAttribute="leading" id="lyP-zK-OTo"/>
+                            <constraint firstAttribute="trailing" secondItem="nnv-S3-79e" secondAttribute="trailing" id="vx0-zB-cvE"/>
+                            <constraint firstItem="ihE-lH-nLt" firstAttribute="leading" secondItem="GcN-60-4Ob" secondAttribute="leading" id="zUi-PK-dqS"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="No9-xv-fbT"/>
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
+                    <connections>
+                        <outlet property="supportEmailLabel" destination="ihE-lH-nLt" id="Bwb-BE-791"/>
+                        <outlet property="tableView" destination="dbi-qO-9Kg" id="q7b-uB-aqT"/>
+                        <outlet property="titleLabel" destination="hPj-Oc-9Uq" id="8SF-Vs-YPh"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="g4n-7o-Brt" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="625" y="-674"/>
         </scene>
     </scenes>
     <resources>
